Modifications on 5 & 6 and Day 7 Challenge JS Version

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="3_ChallengeDay3/JSversion.js"></script>
+    <p>HOLA</p>
+    <script src="7_ChallengeDay7/JSversion.js"></script>
 </body>
 </html>
